--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,7 @@
 @import './projects/projects.css';
 @import './navbar/nav_bar.css';
 @import './project/modal.css';
+@import './projectstwo.css';
 
 html, body {
   margin: 0;
