--- a/styles/projects/projectstwo.css
+++ b/styles/projects/projectstwo.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   overflow: hidden;
-  padding: 30px 50px 30px 50px;
+
 
 }
 
@@ -18,10 +18,10 @@
   width: 90%;
   cursor: pointer;
   transition: transform .7s ease;
-  mix-blend-mode: multiply;
+  opacity: 0;
   height: 200px;
   width: 360px;
-  filter: grayscale(100%);
+
 }
 
 .project2-card-image:hover {
